--- a/index.html
+++ b/index.html
@@ -7,20 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ibento</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
     <section class="section-form">
         <a href="#" class="section__logo">ibento</a>
         <div class="section__column">
-            <h2>Chceš vědět o akcích, <br>
-                které tě zajímají?</h2>
-            <input type="text" placeholder="example@gmail.com">
-            <span>Napiš své zájmy</span>
-            <textarea placeholder="programování, startupy, umění......."></textarea>
-            <button>Sign-Up</button>
+            <form name="submit-to-google-sheet">
+                <h2>Chceš vědět o akcích, <br>
+                    které tě zajímají?</h2>
+                <input type="email" name="Email" placeholder="example@gmail.com">
+                <span>Napiš své zájmy</span>
+                <textarea name="Wishes" placeholder="programování, startupy, umění......."></textarea>
+                <button type="submit">Sign-Up</button>
+            </form>
         </div>
     </section>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwITIUoI1wXyZekMivwviLatljrtptgdiUVoTjYXPT0ajsTZWh68ORTBM-L8LbYaYSo/exec'
+        const form = document.forms['submit-to-google-sheet'];
+        const input = document.querySelector('input[name="Email"]');
+        const textarea = document.querySelector('textarea[name="Wishes"]');
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+
+            Swal.fire({
+                title: 'Success!',
+                text: 'Thanks for your interest!',
+                icon: 'success',
+                confirmButtonText: 'Good'
+            })
+
+            input.value = '';
+            textarea.value = '';
+        })
+    </script>
 </body>
 
 </html>
