Added new field

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <input type="email" name="Email" placeholder="example@gmail.com">
                 <span>Napiš své zájmy</span>
                 <textarea name="Wishes" placeholder="programování, startupy, umění......."></textarea>
+                <span>Napiš akce, které se ti líbily, a proč</span>
+                <textarea name="Favorites" placeholder="programování, startupy, umění......."></textarea>
                 <button type="submit">Sign-Up</button>
             </form>
         </div>
